--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Next Js Starter with Express, Redux, Redux-Saga, Styled-components",
   "main": "index.js",
   "scripts": {
-    "start": "next"
+    "start": "next",
+    "eslint:fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,15 @@
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "prettier": "^1.19.1"
   }
 }
