[기능] update eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
     "node": true,
     "browser": true
   },
-  "rules": {}
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/react-in-jsx-scope": 0
+  }
 }
