[기능] update eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
   },
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "import/extensions": 0,
+    "import/no-unresolved": 0
   }
 }
