--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Next Js Starter with Express, Redux, Redux-Saga, Styled-components",
   "main": "index.js",
   "scripts": {
-    "start": "next",
+    "dev": "nodemon server/index.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server/index.js",
     "eslint:fix": "eslint --fix ."
   },
   "repository": {
@@ -18,7 +20,9 @@
   },
   "homepage": "https://github.com/parkoon/next-saga-starter#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "next": "^9.2.1",
+    "next-routes": "^1.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -30,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   }
 }
