--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
