--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,12 @@
           "@state": "./src/state"
         }
       }
+    ],
+    [
+      "styled-components",
+      {
+        "ssr": true
+      }
     ]
   ]
 }
