--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "next": "^9.2.1",
     "next-routes": "^1.4.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1",
+    "styled-reset": "^4.1.0"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
