--- a/package.json
+++ b/package.json
@@ -22,18 +22,23 @@
   "dependencies": {
     "express": "^4.17.1",
     "next": "^9.2.1",
+    "next-redux-wrapper": "^4.0.1",
     "next-routes": "^1.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.1",
     "styled-reset": "^4.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
