--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.0.1",
     "styled-reset": "^4.1.0"
   },
