--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/parkoon/next-saga-starter#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "next": "^9.2.1",
     "next-redux-wrapper": "^4.0.1",
