--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "react/prop-types": 1,
     "react/jsx-props-no-spreading": 0,
     "no-underscore-dangle": 0,
-    "no-unused-vars": 1
+    "no-unused-vars": 1,
+    "no-nested-ternary": 0
   }
 }
