--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/parkoon/next-saga-starter#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
@@ -33,7 +34,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
-    "styled-reset": "^4.1.0"
+    "styled-reset": "^4.1.0",
+    "webpack": "^4.41.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
