--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js",
+    "analyze": "cross-env BUNDLE_ANALYZE=both npm run build",
     "eslint:fix": "eslint --fix ."
   },
   "repository": {
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/parkoon/next-saga-starter#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
@@ -34,10 +36,11 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
-    "styled-reset": "^4.1.0",
-    "webpack": "^4.41.6"
+    "styled-reset": "^4.1.0"
   },
   "devDependencies": {
+    "webpack": "^4.41.6",
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "babel-eslint": "^10.0.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.7",
