--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "next": "^9.2.1",
+    "next-i18next": "^4.2.0",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^4.0.1",
     "next-routes": "^1.4.2",
     "react": "^16.12.0",
