--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
+    "lru-cache": "^5.1.1",
     "next": "^9.2.1",
     "next-i18next": "^4.2.0",
     "next-redux-saga": "^4.1.2",
