--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
   "homepage": "https://github.com/parkoon/next-saga-starter#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "hpkp": "^2.0.0",
     "lru-cache": "^5.1.1",
+    "morgan": "^1.9.1",
+    "ms": "^2.1.2",
     "next": "^9.2.1",
     "next-i18next": "^4.2.0",
     "next-redux-saga": "^4.1.2",
