--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
     "styled-reset": "^4.1.0"
