--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "react/jsx-props-no-spreading": 0,
     "no-underscore-dangle": 0,
     "no-unused-vars": 1,
-    "no-nested-ternary": 0
+    "no-nested-ternary": 0,
+    "no-param-reassign": 0
   }
 }
