--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "hpkp": "^2.0.0",
+    "immer": "^5.3.6",
     "lru-cache": "^5.1.1",
     "morgan": "^1.9.1",
     "ms": "^2.1.2",
