--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,9 @@
     "no-underscore-dangle": 0,
     "no-unused-vars": 1,
     "no-nested-ternary": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "import/no-dynamic-require": 0,
+    "global-require": 0,
+    "import/prefer-default-export": 0
   }
 }
