--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "@components/*": ["./src/components/*"],
       "@container/*": ["./src/container/*"],
       "@helpers/*": ["./src/helpers/*"],
-      "@state/*": ["./src/state/*"]
+      "@state/*": ["./src/state/*"],
+      "@api/*": ["./src/services/api/*"]
     }
   }
 }
