--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
+    "formik": "^2.1.4",
     "helmet": "^3.21.2",
     "hpkp": "^2.0.0",
     "immer": "^5.3.6",
@@ -39,6 +40,7 @@
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^4.0.1",
     "next-routes": "^1.4.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -47,7 +49,9 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
-    "styled-reset": "^4.1.0"
+    "styled-reset": "^4.1.0",
+    "styled-tools": "^1.7.1",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "webpack": "^4.41.6",
