[형식] 폴더 구조 변경 (services 폴더 제거)

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,7 @@
       "@container/*": ["./src/container/*"],
       "@helpers/*": ["./src/helpers/*"],
       "@state/*": ["./src/state/*"],
-      "@api/*": ["./src/services/api/*"]
+      "@api/*": ["src/api/*"]
     }
   }
 }
