--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,8 @@
     "no-param-reassign": 0,
     "import/no-dynamic-require": 0,
     "global-require": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "jsx-a11y/anchor-is-valid": 0,
+    "no-unused-expressions": 0
   }
 }
