--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "helmet": "^3.21.2",
     "hpkp": "^2.0.0",
     "immer": "^5.3.6",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "lru-cache": "^5.1.1",
     "morgan": "^1.9.1",
     "ms": "^2.1.2",
