--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "global-require": 0,
     "import/prefer-default-export": 0,
     "jsx-a11y/anchor-is-valid": 0,
-    "no-unused-expressions": 0
+    "no-unused-expressions": 0,
+    "consistent-return": 0
   }
 }
