--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ms": "^2.1.2",
     "next": "^9.2.1",
     "next-i18next": "^4.2.0",
+    "next-images": "^1.3.0",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^4.0.1",
     "next-routes": "^1.4.2",
