--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "import/extensions": 0,
     "import/no-unresolved": 0,
     "no-debugger": 0,
-    "react/prop-types": 1,
+    "react/prop-types": 0,
     "react/jsx-props-no-spreading": 0,
     "no-underscore-dangle": 0,
     "no-unused-vars": 1,
@@ -33,6 +33,7 @@
     "import/prefer-default-export": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "no-unused-expressions": 0,
-    "consistent-return": 0
+    "consistent-return": 0,
+    "no-console": 0
   }
 }
